Fix exit zoom button misalignement

--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,6 @@ nav #esc {
 }
 
 .zoomed #esc {
-  align-self: start;
   display: block;
 }
 
